# mermaiden

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mermaiden.py  pyproject.toml
examples/: ctypes.txt  ctypesUML.md  dummy_pckg.txt  dummy_pckgUML.md
examples/dummy_pckg/src/: __init__.py  dummy_pckg.py
examples/dummy_pckg/src/subpckg-aggregation/: __init__.py
examples/dummy_pckg/src/subpckg-association/: __init__.py  subpckg-association.py
examples/dummy_pckg/src/subpckg-inheritance/: __init__.py
examples/dummy_pckg/src/subpckg-inheritance/subpckg-inheritance-nested-association/: __init__.py
examples/dummy_pckg/src/subpckg-inheritance/subpckg-inheritance-nested-inheritance/: __init__.py  subpckg-inheritance-nested-association.py
examples/dummy_pckg/src/subpckg-realisation/: __init__.py  subpckg-realisation.py
examples/dummy_pckg/src/subpckg_aggregation/: __init__.py  subpckg_aggregation.py
examples/dummy_pckg/src/subpckg_association/: __init__.py  subpckg_association.py
examples/dummy_pckg/src/subpckg_inheritance/: __init__.py  subpckg_inheritance.py
examples/dummy_pckg/src/subpckg_inheritance/subpckg_inheritance_nested_association/: __init__.py  subpckg_inheritance_nested_association.py
examples/dummy_pckg/src/subpckg_inheritance/subpckg_inheritance_nested_inheritance/: __init__.py  subpckg_inheritance_nested_inheritance.py
examples/dummy_pckg/src/subpckg_realisation/: __init__.py  subpckg_realisation.py
examples/dummy_pckg_pydantic/: README.md
examples/dummy_pckg_pydantic/src/: __init__.py  dummy_pckg.py
examples/dummy_pckg_pydantic/src/subpckg_aggregation/: __init__.py  subpckg_aggregation.py
examples/dummy_pckg_pydantic/src/subpckg_association/: __init__.py  subpckg_association.py
examples/dummy_pckg_pydantic/src/subpckg_inheritance/: __init__.py  subpckg_inheritance.py
examples/dummy_pckg_pydantic/src/subpckg_inheritance/subpckg_inheritance_nested_association/: __init__.py  subpckg_inheritance_nested_association.py
examples/dummy_pckg_pydantic/src/subpckg_inheritance/subpckg_inheritance_nested_inheritance/: __init__.py  subpckg_inheritance_nested_inheritance.py
examples/dummy_pckg_pydantic/src/subpckg_realisation/: __init__.py  subpckg_realisation.py
src/: __init__.py  ast_logic.py  discovery.py  generate.py  inventory.py  mermaiden.py  models.py  paths.py  render.py
tests/: test_ast_logic.py  test_cli_mermaiden.py  test_discovery.py  test_integration_dummy_pckg.py  test_inventory.py  test_models.py  test_paths.py  test_render.py
