[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaiden"
version = "0.13.1"
description = "Two-phase Python UML extractor that generates Mermaid class diagrams"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "ChatGPT piloted by Yoann Arhant", email = "yoann.arhant@hotmail.fr"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8.1"
dependencies = [
    "bump2version>=1.0.1",
    "pre-commit>=3.5.0",
    "pydantic>=2.10.6",
    "pytest-cov>=5.0.0",
    "pytest-coverage>=0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=7.0",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-comprehensions",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/YsWorkBench/chatGPT-src-to-mermaid"
Repository = "https://github.com/YsWorkBench/chatGPT-src-to-mermaid"
Issues = "https://github.com/YsWorkBench/chatGPT-src-to-mermaid.git"

[project.scripts]
mermaiden = "mermaiden:main"

[tool.setuptools]
py-modules = [
    "ast_logic",
    "discovery",
    "generate",
    "inventory",
    "mermaiden",
    "models",
    "paths",
    "render",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
order_by_type = false
force_sort_within_sections = true
line_length = 88

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501", "E731"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache"
]
per-file-ignores = [
    "tests/*:D100,D103,E501,F401,F811,E731",
    "__init__.py:F401"
]
max-complexity = 30
import-order-style = "google"
application-import-names = "ast_logic,discovery,generate,inventory,mermaiden,models,paths,render"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -ra --strict-markers --maxfail=1 --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    ".tox/*",
    "tests/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
